// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MatrixChat /> should render spinner while app is loading 1`] = `
<div>
  <div
    class="mx_MatrixChat_splash"
  >
    <div
      class="mx_Spinner"
    >
      <div
        aria-label="Loading…"
        class="mx_Spinner_icon"
        data-testid="spinner"
        role="progressbar"
        style="width: 32px; height: 32px;"
      />
    </div>
  </div>
</div>
`;

exports[`<MatrixChat /> with a soft-logged-out session should show the soft-logout page 1`] = `
<div>
  <div
    class="mx_AuthPage"
  >
    <div
      class="mx_AuthPage_modal"
    >
      <div
        class="mx_AuthHeader"
      >
        <aside
          class="mx_AuthHeaderLogo"
        >
          Matrix
        </aside>
        <div
          class="mx_Dropdown mx_LanguageDropdown mx_AuthBody_language"
        >
          <div
            aria-describedby="mx_LanguageDropdown_value"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Language Dropdown"
            aria-owns="mx_LanguageDropdown_input"
            class="mx_AccessibleButton mx_Dropdown_input mx_no_textinput"
            role="button"
            tabindex="0"
          >
            <div
              class="mx_Dropdown_option"
              id="mx_LanguageDropdown_value"
            >
              <div>
                English
              </div>
            </div>
            <span
              class="mx_Dropdown_arrow"
            />
          </div>
        </div>
      </div>
      <main
        class="mx_AuthBody"
      >
        <h1>
          You're signed out
        </h1>
        <h2>
          Sign in
        </h2>
        <div>
          <form>
            <p>
              Regain access to your account and recover encryption keys stored in this session. Without them, you won't be able to read all of your secure messages in any session.
            </p>
            <div
              class="mx_Field mx_Field_input"
            >
              <input
                id="mx_Field_1"
                label="Password"
                placeholder="Password"
                type="password"
                value=""
              />
              <label
                for="mx_Field_1"
              >
                Password
              </label>
            </div>
            <div
              class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
              role="button"
              tabindex="0"
              type="submit"
            >
              Sign in
            </div>
            <div
              class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link"
              role="button"
              tabindex="0"
            >
              Forgotten your password?
            </div>
          </form>
        </div>
        <h2>
          Clear personal data
        </h2>
        <p>
          Warning: your personal data (including encryption keys) is still stored in this session. Clear it if you're finished using this session, or want to sign in to another account.
        </p>
        <div>
          <div
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger"
            role="button"
            tabindex="0"
          >
            Clear all data
          </div>
        </div>
      </main>
    </div>
    <footer
      class="mx_AuthFooter"
      role="contentinfo"
    >
      <a
        href="https://matrix.org"
        rel="noreferrer noopener"
        target="_blank"
      >
        powered by Matrix
      </a>
    </footer>
  </div>
</div>
`;

exports[`<MatrixChat /> with an existing session onAction() room actions leave_room for a room should launch a confirmation modal 1`] = `
<div
  aria-describedby="mx_Dialog_content"
  aria-labelledby="mx_BaseDialog_title"
  class="mx_QuestionDialog mx_Dialog_fixedWidth"
  data-focus-lock-disabled="false"
  role="dialog"
>
  <div
    class="mx_Dialog_header mx_Dialog_headerWithCancel"
  >
    <h2
      class="mx_Heading_h3 mx_Dialog_title"
      id="mx_BaseDialog_title"
    >
      Leave room
    </h2>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    class="mx_Dialog_content"
    id="mx_Dialog_content"
  >
    <span>
      Are you sure you want to leave the room '!room:server.org'?
    </span>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <span
      class="mx_Dialog_buttons_row"
    >
      <button
        data-testid="dialog-cancel-button"
        type="button"
      >
        Cancel
      </button>
      <button
        class="mx_Dialog_primary focus-visible"
        data-focus-visible-added=""
        data-testid="dialog-primary-button"
        type="button"
      >
        Leave
      </button>
    </span>
  </div>
</div>
`;

exports[`<MatrixChat /> with an existing session onAction() room actions leave_room for a space should launch a confirmation modal 1`] = `
<div
  aria-describedby="mx_Dialog_content"
  aria-labelledby="mx_BaseDialog_title"
  class="mx_QuestionDialog mx_Dialog_fixedWidth"
  data-focus-lock-disabled="false"
  role="dialog"
>
  <div
    class="mx_Dialog_header mx_Dialog_headerWithCancel"
  >
    <h2
      class="mx_Heading_h3 mx_Dialog_title"
      id="mx_BaseDialog_title"
    >
      Leave space
    </h2>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    class="mx_Dialog_content"
    id="mx_Dialog_content"
  >
    <span>
      Are you sure you want to leave the space '!spaceRoom:server.org'?
    </span>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <span
      class="mx_Dialog_buttons_row"
    >
      <button
        data-testid="dialog-cancel-button"
        type="button"
      >
        Cancel
      </button>
      <button
        class="mx_Dialog_primary focus-visible"
        data-focus-visible-added=""
        data-testid="dialog-primary-button"
        type="button"
      >
        Leave
      </button>
    </span>
  </div>
</div>
`;
